# mta_pixel_map

./: .gitignore  NYC.aseprite
godot/: NYC.png.import  control.gd  control.gd.uid  control.tscn  icon.svg.import  item_list.gd  item_list.gd.uid  map.tscn  map_screen.tscn  project.godot  realtime_manager.gd  rust.gdextension  rust.gdextension.uid
godot/assets/: NYC.aseprite  NYC.png.import
godot/assets/line_icons/: 1.aseprite  1.png.import  2.aseprite  2.png.import  3.aseprite  3.png.import  4.aseprite  4.png.import  5.aseprite  5.png.import  5X.aseprite  5X.png.import  6.aseprite  6.png.import  6X.aseprite  6X.png.import  7.aseprite  7.png.import  7X.aseprite  7X.png.import  A.aseprite  A.png.import  B.aseprite  B.png.import  C.aseprite  C.png.import  D.aseprite  D.png.import  E.aseprite  E.png.import  F.aseprite  F.png.import  FX.aseprite  FX.png.import  G.aseprite  G.png.import  GS.aseprite  GS.png.import  J.aseprite  J.png.import  (+14 more)
godot/resources/: data.gd  data.gd.uid  data.tres  reference_point.gd  reference_point.gd.uid  route.gd  route.gd.uid
godot/scripts/: consts.gd  consts.gd.uid  control.gd  map.gd  map.gd.uid  map_screen.gd  map_screen.gd.uid  realtime_manager.gd  realtime_manager.gd.uid  realtime_request.gd  realtime_request.gd.uid  route_manager.gd  route_manager.gd.uid  schedule.gd  schedule_manager.gd  schedule_manager.gd.uid  sidebar.gd  state.gd  state.gd.uid  utils.gd  utils.gd.uid
rust/: .session  Cargo.toml  build.rs
rust/src/: lib.rs  mod.rs  realtime.rs  schedule.rs
rust/src/protos/: gtfs_realtime.rs  gtfs_realtime_NYCT.rs
(+20 files in other folders)
