[package]
name = "transit_app"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = "0.2.4"
gtfs-parsing = { git = "https://github.com/DylanBulfin/gtfs-parsing", branch = "main" }
serde = "1.0.219"
serde_json = "1.0.140"

[build-dependencies]
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"

[lib]
crate-type = ["cdylib"]
